<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>Practice_TDD_WebAutomationFrameworkMultiModules_QE_Winter2022</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>Generic</module>
        <module>Amazon</module>
        <module>UnitedHealthCare</module>
        <module>UPS</module>
        <module>Delta</module>
    </modules>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>


    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
            <dependency>
                <groupId>io.github.bonigarcia</groupId>
                <artifactId>webdrivermanager</artifactId>
                <version>5.2.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-java</artifactId>
                <version>4.3.0</version>
            </dependency>

            <!--    Selenium Grid-->
            <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-server</artifactId>
                <version>4.0.0-alpha-2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.testng/testng -->
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>7.6.1</version>
            </dependency>


            <!--    Excel Configuration Dependencies-->
            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>5.2.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>5.2.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml-schemas</artifactId>
                <version>4.1.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-examples -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-examples</artifactId>
                <version>5.2.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-scratchpad</artifactId>
                <version>5.2.2</version>
            </dependency>


            <!--    Database Configuration Dependencies-->

            <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.29</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>mongo-java-driver</artifactId>
                <version>3.12.11</version>
            </dependency>

            <!--    Extent Reports for Reporting purpose -->

            <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
            <dependency>
                <groupId>com.aventstack</groupId>
                <artifactId>extentreports</artifactId>
                <version>5.0.9</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
            <dependency>
                <groupId>com.relevantcodes</groupId>
                <artifactId>extentreports</artifactId>
                <version>2.41.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.12.0</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.11.0</version>
            </dependency>

            <!--        BDD Cucumber Dependencies-->

            <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-core</artifactId>
                <version>7.4.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-java</artifactId>
                <version>7.4.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm-deps -->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-jvm-deps</artifactId>
                <version>1.0.6</version>
                <scope>provided</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/io.cucumber/gherkin -->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>gherkin</artifactId>
                <version>23.0.1</version>
            </dependency>

            <!--        &lt;!&ndash; https://mvnrepository.com/artifact/junit/junit &ndash;&gt;-->
            <!--        <dependency>-->
            <!--            <groupId>junit</groupId>-->
            <!--            <artifactId>junit</artifactId>-->
            <!--            <version>4.13.2</version>-->
            <!--        </dependency>-->

            <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-junit</artifactId>
                <version>7.4.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-testng</artifactId>
                <version>7.4.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-html -->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-html</artifactId>
                <version>0.2.7</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-picocontainer</artifactId>
                <version>7.4.1</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
            <dependency>
                <groupId>org.freemarker</groupId>
                <artifactId>freemarker</artifactId>
                <version>2.3.31</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
            <dependency>
                <groupId>net.sourceforge.cobertura</groupId>
                <artifactId>cobertura</artifactId>
                <version>2.1.1</version>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>com.sun</groupId>
                        <artifactId>tools</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
            <dependency>
                <groupId>net.masterthought</groupId>
                <artifactId>cucumber-reporting</artifactId>
                <version>5.7.2</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/net.masterthought/maven-cucumber-reporting -->
            <dependency>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>5.7.1</version>
            </dependency>


            <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-core</artifactId>
                <version>2.2</version>
            </dependency>

            <!--            Extent Report with Cucumber-->

            <!-- https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport -->
            <dependency>
                <groupId>com.vimalselvam</groupId>
                <artifactId>cucumber-extentsreport</artifactId>
                <version>3.1.1</version>
            </dependency>

        </dependencies>

    </dependencyManagement>


    <build>
        <pluginManagement>

            <plugins>
                <!--        https://maven.apache.org/plugins/maven-compiler-plugin/examples/set-compiler-source-and-target.html-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <source>11</source>
                        <target>11</target>
                        <!--                    <release>16</release>-->
                        <fork>true</fork>
                        <compilerArgs>
                            <!--                            If JDK 11 then comment below line-->
                            <!--                        <arg>&#45;&#45;enable-preview</arg>-->
                            <arg>-Xlint:all</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
                        </compilerArgs>
                        <!--for unmappable characters in classes-->
                        <encoding>UTF-8</encoding>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <!--for lombok annotations to resolve-->
                        <!--contradictory to maven, intelliJ fails with this-->

                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.24</version>
                            </path>
                        </annotationProcessorPaths>


                    </configuration>
                </plugin>


                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <!-- TestNG http Error Handle purpose -->
                        <systemPropertyVariables>
                            <testng.dtd.http>true</testng.dtd.http>
                        </systemPropertyVariables>
                        <!-- Test Fail will be Ignored -->
                        <testFailureIgnore>true</testFailureIgnore>
                        <!--Test Runner Files-->
                        <includes>
                            <include>**/TestRunner.java</include>
                            <!--                        <include>**/AmazonRegressionTestRunner.java</include>-->
                            <!--                        <include>**/AmazonSmokeTestRunner.java</include>-->
                        </includes>
                        <suiteXmlFiles>
                            <suiteXmlFile>target/test-classes/AmazonRegressionTestRunner.xml</suiteXmlFile>
                            <suiteXmlFile>target/test-classes/DeltaRegressionTestRunner.xml</suiteXmlFile>
                            <suiteXmlFile>target/test-classes/UnitedHealthCareRegressionTestRunner.xml</suiteXmlFile>
                            <suiteXmlFile>target/test-classes/UPSRegressionTestRunner.xml</suiteXmlFile>



                        </suiteXmlFiles>
                    </configuration>
                </plugin>



                <plugin>
                    <groupId>net.masterthought</groupId>
                    <artifactId>maven-cucumber-reporting</artifactId>
                    <version>5.6.1</version>
                    <executions>
                        <execution>
                            <id>execution</id>
                            <!--                        <phase>test</phase>-->
                            <phase>verify</phase>
                            <goals>
                                <goal>generate</goal>
                            </goals>

                            <configuration>
                                <projectName>BDD-AutomationTestSuite</projectName>
                                <buildNumber>1</buildNumber>
                                <skip>false</skip>
                                <outputDirectory>${project.build.directory}/cucumber-reports/advanced-reports
                                </outputDirectory>
                                <!--                            Custom Path for Reports-->
                                <!--                            <outputDirectory>BG-TestAutomation-Reports</outputDirectory>-->

                                <!--   <cucumberOutput>${project.build.directory}/cucumber-reports/cucumber-report.json</cucumberOutput>-->
                                <!--     <outputDirectory>target/cucumber-reports/cucumber-report-html</outputDirectory>-->

                                <inputDirectory>${project.build.directory}/cucumber-reports</inputDirectory>
                                <jsonFiles>
                                    <param>**/*.json</param>
                                </jsonFiles>
                                <!-- optional, defaults to outputDirectory if not specified -->
                                <classificationDirectory>${project.build.directory}/classifications
                                </classificationDirectory>
                                <classificationFiles>
                                    <!-- supports wildcard or name pattern -->
                                    <param>sample.properties</param>
                                    <param>other.properties</param>
                                </classificationFiles>
                                <!--                            <parallelTesting>false</parallelTesting>-->
                                <!-- optional, set true to group features by its Ids -->
                                <mergeFeaturesById>false</mergeFeaturesById>
                                <!-- optional, set true to get a final report with latest results of the same test from different test runs -->
                                <mergeFeaturesWithRetest>false</mergeFeaturesWithRetest>
                                <!-- optional, set true to fail build on test failures -->
                                <checkBuildResult>false</checkBuildResult>
                                <classificationDirectory>${project.build.directory}/cucumber-reports
                                </classificationDirectory>
                                <checkBuildResult>false</checkBuildResult>
                            </configuration>
                        </execution>
                    </executions>

                </plugin>


            </plugins>


        </pluginManagement>

    </build>

</project>